--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -1,7 +1,41 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@600&family=Shadows+Into+Light&display=swap');
+
+/* ------------------  */
+/*  Custom Properties  */
+/* ------------------  */
+
+:root {
+  /* Global colors */
+  --clr-red: 357 95% 41%;
+  --clr-white: 240 100% 100%;
+  --clr-dark: 260 14% 4%;
+  --clr-gold: 36 54% 51%;
+  --clr-silver: 27 26% 93%;
+
+   /* Font-families */
+   --ff-normal: 'Antonio', 'Anton', sans-serif;
+   --ff-hand: 'Shadows Into Light', cursive;
+
+  /* Font-sizes */
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+}
+
+:root {
+  display: flex;
+  justify-content: center;
+}
+
 /* ----------------- */
 /*  RESET            */
 /* ----------------- */
+
 /* Box sizing */
 *,
 *::before,
@@ -24,9 +58,13 @@ picture {
 
 /* Set up the body */
 body {
+  font-family: var(--ff-normal);
+  font-size: var(--fs-400);
+  color: var(--clr-dark);
+  background-color: var(--clr-white);
   line-height: 1.5;
   min-height: 100vh;
-  font-family: 'Anton', sans-serif;
+  border: 1px solid hsl( var(--clr-silver) );
 }
 
 /* Reset image format */
@@ -59,12 +97,16 @@ select {
   }
 }
 
-/* Utility classes */
+/* ----------------- */
+/* Utility Classes   */
+/* ----------------- */
+
+/* General classes */
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: var(--gap, 1rem);
+  /* gap: var(--gap, 1rem); */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -81,9 +123,11 @@ select {
 
 .container {
   max-width: 80rem;
+  /* margin-inline: 2rem; */
   padding-inline: auto;
 }
 
+/* when using this class the elements are visualy gone but still in the DOM */
 .sr-only {
   position: absolute;
   width: 1px;
@@ -93,7 +137,43 @@ select {
   overflow: hidden;
   clip: react(0, 0, 0, 0);
   white-space: nowrap;
-  /* added line */
   border: 0;
 }
-/*# sourceMappingURL=index.css.map */
+
+/* Colors classes */
+.bg-dark { background-color: hsl( var(--clr-dark) ); }
+.bg-light { background-color: hsl( var(--clr-white) ); }
+.bg-red { background-color: hsl( var(--clr-red) ); }
+.bg-gold { background-color: hsl( var(--clr-gold) ); }
+.bg-silver { background-color: hsl( var(--clr-silver) ); }
+.text-dark { color: hsl( var(--clr-dark) ); }
+.text-light { color: hsl( var(--clr-white) ); }
+.text-red { color: hsl( var(--clr-red) ); }
+.text-gold { color: hsl( var(--clr-gold) ); }
+.text-silver { color: hsl( var(--clr-silver) ); }
+
+/* Typography classes */
+.ff-normal { font-family: var(--ff-normal); }
+.ff-hand { font-family: var(--ff-hand); }
+
+.fs-900 { font-size: var(--fs-900); }
+.fs-800 { font-size: var(--fs-800); }
+.fs-700 { font-size: var(--fs-700); }
+.fs-600 { font-size: var(--fs-600); }
+.fs-500 { font-size: var(--fs-500); }
+.fs-400 { font-size: var(--fs-400); }
+.fs-300 { font-size: var(--fs-300); }
+.fs-200 { font-size: var(--fs-200); }
+
+.letter-spacing-1 { letter-spacing: 4.74px; }
+.letter-spacing-2 { letter-spacing: 2.7px; }
+.letter-spacing-3 { letter-spacing: 2.35px; }
+
+.uppercase { text-transform: uppercase; }
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+  line-height: 1.1;
+}
