--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -1,9 +1,8 @@
 .footer {
     width: 100%;
     height: 9rem;
-    border: 3px solid black;
+    border-top: 3px solid hsl(var(--clr-silver));
     justify-content: space-between;
-    padding-top: 0;
   }
 
   .footer .contact {
