--- a/shinobi-frontend/src/Components/WelcomePage/Welcome.css
+++ b/shinobi-frontend/src/Components/WelcomePage/Welcome.css
@@ -1,32 +1,30 @@
-.content .text-content {
+.welcome-content .text-content {
     font-family: var(--ff-hand);
     flex-direction: column;
     padding: 3rem 0.3rem;
   }
 
-  .content .text-content p {
+  .welcome-content .text-content p {
     font-size: var(--fs-400);
     font-weight: 600;
   }
 
-  .content .text-content h3 {
+  .welcome-content .text-content h3 {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     padding-right: 1rem;
   }
 
-  .content .media {
+  .welcome-content > .container > .media-content {
+    position: relative;
     width: 100%;
     height: 30rem;
-    max-height: auto;
     background-color: hsl(var(--clr-silver));
   }
 
-  .content .enter-button {
+  .welcome-content > .container > .access-button {
     position: absolute;
-    width: 9rem;
-    height: 9rem;
-    border-radius: 50%;
-    border: 2px solid hsl(var(--clr-dark));
   }
+
+
