--- a/shinobi-frontend/src/Main.css
+++ b/shinobi-frontend/src/Main.css
@@ -1,8 +1,4 @@
 .main {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-items: center;
+  overflow: hidden;
 }
-
-
