--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -12,9 +12,9 @@
   --clr-gold: 36 54% 51%;
   --clr-silver: 27 26% 93%;
 
-   /* Font-families */
-   --ff-normal: 'Antonio', 'Anton', sans-serif;
-   --ff-hand: 'Shadows Into Light', cursive;
+  /* Font-families */
+  --ff-normal: 'Antonio', 'Anton', sans-serif;
+  --ff-hand: 'Shadows Into Light', cursive;
 
   /* Font-sizes */
   --fs-900: 9.375rem;
@@ -41,7 +41,7 @@
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Margins */
@@ -64,7 +64,7 @@ body {
   background-color: var(--clr-white);
   line-height: 1.5;
   min-height: 100vh;
-  border: 1px solid hsl( var(--clr-silver) );
+  border: 1px solid hsl(var(--clr-silver));
 }
 
 /* Reset image format */
@@ -88,11 +88,11 @@ select {
   *::before,
   *::after {
     -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
     -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
+    animation-iteration-count: 1 !important;
     -webkit-transition-duration: 0.01ms !important;
-            transition-duration: 0.01ms !important;
+    transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
@@ -106,13 +106,13 @@ select {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* gap: var(--gap, 1rem); */
+  gap: var(--gap, 1rem);
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .grid {
@@ -128,13 +128,17 @@ select {
 
 .container {
   max-width: 80rem;
-  /* margin-inline: 2rem; */
-  padding-inline: auto;
+  margin-inline: 2rem;
 }
 
 .container-grid {
+  outline: 5px solid hsl(var(--clr-gold));
   display: grid;
-  grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr) ;
+  margin-top: 2rem;
+  grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
+      2rem,
+      1fr
+    );
 }
 
 .container-grid > *:first-child {
@@ -158,35 +162,83 @@ select {
 }
 
 /* Colors classes */
-.bg-dark { background-color: hsl( var(--clr-dark) ); }
-.bg-light { background-color: hsl( var(--clr-white) ); }
-.bg-red { background-color: hsl( var(--clr-red) ); }
-.bg-gold { background-color: hsl( var(--clr-gold) ); }
-.bg-silver { background-color: hsl( var(--clr-silver) ); }
-.text-dark { color: hsl( var(--clr-dark) ); }
-.text-light { color: hsl( var(--clr-white) ); }
-.text-red { color: hsl( var(--clr-red) ); }
-.text-gold { color: hsl( var(--clr-gold) ); }
-.text-silver { color: hsl( var(--clr-silver) ); }
+.bg-dark {
+  background-color: hsl(var(--clr-dark));
+}
+.bg-light {
+  background-color: hsl(var(--clr-white));
+}
+.bg-red {
+  background-color: hsl(var(--clr-red));
+}
+.bg-gold {
+  background-color: hsl(var(--clr-gold));
+}
+.bg-silver {
+  background-color: hsl(var(--clr-silver));
+}
+.text-dark {
+  color: hsl(var(--clr-dark));
+}
+.text-light {
+  color: hsl(var(--clr-white));
+}
+.text-red {
+  color: hsl(var(--clr-red));
+}
+.text-gold {
+  color: hsl(var(--clr-gold));
+}
+.text-silver {
+  color: hsl(var(--clr-silver));
+}
 
 /* Typography classes */
-.ff-normal { font-family: var(--ff-normal); }
-.ff-hand { font-family: var(--ff-hand); }
+.ff-normal {
+  font-family: var(--ff-normal);
+}
+.ff-hand {
+  font-family: var(--ff-hand);
+}
 
-.fs-900 { font-size: var(--fs-900); }
-.fs-800 { font-size: var(--fs-800); }
-.fs-700 { font-size: var(--fs-700); }
-.fs-600 { font-size: var(--fs-600); }
-.fs-500 { font-size: var(--fs-500); }
-.fs-400 { font-size: var(--fs-400); }
-.fs-300 { font-size: var(--fs-300); }
-.fs-200 { font-size: var(--fs-200); }
+.fs-900 {
+  font-size: var(--fs-900);
+}
+.fs-800 {
+  font-size: var(--fs-800);
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-200 {
+  font-size: var(--fs-200);
+}
 
-.letter-spacing-1 { letter-spacing: 4.74px; }
-.letter-spacing-2 { letter-spacing: 2.7px; }
-.letter-spacing-3 { letter-spacing: 2.35px; }
+.letter-spacing-1 {
+  letter-spacing: 4.74px;
+}
+.letter-spacing-2 {
+  letter-spacing: 2.7px;
+}
+.letter-spacing-3 {
+  letter-spacing: 2.35px;
+}
 
-.uppercase { text-transform: uppercase; }
+.uppercase {
+  text-transform: uppercase;
+}
 
 .fs-900,
 .fs-800,
@@ -195,6 +247,13 @@ select {
   line-height: 1.1;
 }
 
+.page-title {
+  font-size: var(--fs-700);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
 /* ----------------- */
 /* Components        */
 /* ----------------- */
@@ -213,7 +272,7 @@ select {
 .button-large::after {
   content: '';
   position: absolute;
-  background-color: hsl( var(--clr-red) / .33);
+  background-color: hsl(var(--clr-red) / 0.33);
   width: 100%;
   height: 100%;
   border-radius: inherit;
@@ -230,14 +289,14 @@ select {
 
 .underline-indicators > * {
   padding: var(--underline-gap, 1rem) 0;
-  border-bottom: .2em solid hsl( var(--clr-red) / 0);
+  border-bottom: 0.2em solid hsl(var(--clr-red) / 0);
 }
 
 .underline-indicators > *:hover,
 .underline-indicators > *:focus {
-  border-color: hsl(var(--clr-red) / .50);
-} 
+  border-color: hsl(var(--clr-red) / 0.5);
+}
 
 .underline-indicators > .active {
-  border-bottom: .2em solid hsl( var(--clr-red) / 1);
+  border-bottom: 0.2em solid hsl(var(--clr-red) / 1);
 }
