--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -1,28 +1,39 @@
 .footer {
-    width: 100%;
-    height: 9rem;
-    border-top: 3px solid hsl(var(--clr-silver));
-    justify-content: space-between;
-  }
+  width: 100%;
+  height: auto;
+  border-top: 0.15rem solid hsl(var(--clr-dark));
+  justify-content: space-between;
+  flex-direction: column;
+}
 
-  .footer .contact {
-      flex-direction: column;
-      justify-content: center;
-        
-  }
-  
-  .footer .map {
-    border: 1px solid black;
-    width: auto;
-    height: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(var(--clr-silver));
-    width: 50%;
-    margin: 0.33rem;
-  }
-  
-  .footer ul {
-      list-style: none;
-  }
+.footer .contact {
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer ul {
+  list-style: none;
+}
+
+.social-media {
+  border-top: 0.15rem solid hsl(var(--clr-dark));
+  width: 100%;
+}
+.social-media ul {
+  justify-content: space-evenly;
+  padding: 0;
+}
+.contact-form {
+  width: 100%;
+}
+.contact-form > form > input {
+  margin-bottom: 0.5rem;
+  border: 0.15rem solid hsl(var(--clr-dark));
+  width: 100%;
+}
+#send-message {
+  background-color: hsl(var(--clr-light));
+  width: 50%;
+  border-radius: 9px;
+  border: 0.15rem solid hsl(var(--clr-dark));
+}
