--- a/shinobi-frontend/src/Components/WelcomePage/Welcome.css
+++ b/shinobi-frontend/src/Components/WelcomePage/Welcome.css
@@ -1,30 +1,23 @@
 .welcome-content .text-content {
-    font-family: var(--ff-hand);
-    flex-direction: column;
-    padding: 3rem 0.3rem;
-  }
+  padding: 3rem 0.3rem;
+}
 
-  .welcome-content .text-content p {
-    font-size: var(--fs-400);
-    font-weight: 600;
-  }
+.welcome-content > .nav-container {
+  position: relative;
+  width: 100%;
+  height: 30rem;
+  border: 1px solid salmon;
+}
 
-  .welcome-content .text-content h3 {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 1rem;
-  }
-
-  .welcome-content > .container > .media-content {
-    position: relative;
-    width: 100%;
-    height: 30rem;
-    background-color: hsl(var(--clr-silver));
-  }
-
-  .welcome-content > .container > .access-button {
-    position: absolute;
-  }
-
-
+.welcome-content > .nav-container > .media-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://source.unsplash.com/Z3fu-8gV66Q');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
