new about us and classes component

--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -5,19 +5,24 @@
 .welcome-content > .nav-container {
   position: relative;
   width: 100%;
-  height: 30rem;
-  border: 1px solid salmon;
+  height: 33rem;
+  border: 0.2rem solid hsl(var(--clr-red));
 }
 
 .welcome-content > .nav-container > .media-content {
   position: absolute;
   top: 0;
-  right: 0;
-  left: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://source.unsplash.com/Z3fu-8gV66Q');
+  background-image: url('https://source.unsplash.com/AsCCBr7J-XM');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
+
+/* @media screen and (min-width: 1000px) {
+  .welcome-content > .nav-container > .media-content {
+    
+  }
+} */
