--- a/shinobi-frontend/src/Components/Navigation/MainNav.css
+++ b/shinobi-frontend/src/Components/Navigation/MainNav.css
@@ -21,13 +21,14 @@
 }
 
 .menu-toggler-label {
-  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, background-color 0.5s;
   border: 2px solid hsl(var(--clr-dark));
 }
 
 .menu-toggler:hover + label,
 .menu-toggler:focus + label {
   box-shadow: 0 0 0 0.33rem hsl(var(--clr-red) / 0.99);
+  background-color: hsl(var(--clr-white) / 0.88);
 }
 .menu-toggler:checked + label {
   background: transparent;
@@ -77,7 +78,7 @@
   z-index: 1;
   border-radius: 50%;
   text-align: center;
-  background: hsl(var(--clr-white));
+  background: hsl(var(--clr-white) / 0.5);
   transition: transform 0.5s top 0.5s;
   top: 0;
   bottom: 0;
@@ -141,7 +142,7 @@
   line-height: 4.5rem;
   color: hsl(var(--clr-red));
   border: 2px solid hsl(var(--clr-dark));
-  background: hsl(var(--clr-white));
+  background: hsl(var(--clr-white) / 0.88);
   border-radius: 50%;
   text-align: center;
   text-decoration: none;
