--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -5,6 +5,9 @@
 /* ------------------  */
 
 :root {
+  /* Position */
+  display: flex;
+  justify-content: center;
   /* Global colors */
   --clr-red: 357 95% 41%;
   --clr-white: 240 100% 100%;
@@ -21,15 +24,10 @@
   --fs-800: 6.25rem;
   --fs-700: 3.5rem;
   --fs-600: 2rem;
-  --fs-500: 1.75rem;
+  --fs-500: 1.45rem;
   --fs-400: 1.125rem;
   --fs-300: 1rem;
   --fs-200: 0.875rem;
-}
-
-:root {
-  display: flex;
-  justify-content: center;
 }
 
 /* ----------------- */
@@ -123,16 +121,16 @@ select {
 
 .flow > *:where(:not(:first-child)) {
   margin-top: var(--flow-space, 1rem);
-  outline: 1px solid red;
+  /* outline: 1px solid hsl(var(--clr-red)); */
 }
 
 .container {
   max-width: 80rem;
-  margin-inline: 2rem;
+  margin-inline: 1rem;
 }
-
+/* 
 .container-grid {
-  outline: 5px solid hsl(var(--clr-gold));
+  outline: 0.2rem solid hsl(var(--clr-red));
   display: grid;
   margin-top: 2rem;
   grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
@@ -147,7 +145,7 @@ select {
 
 .container-grid > *:last-child {
   grid-column: 3;
-}
+} */
 /* when using this class the elements are visualy gone but still in the DOM */
 .sr-only {
   position: absolute;
@@ -248,11 +246,13 @@ select {
 }
 
 .page-title {
-  font-size: var(--fs-700);
+  font-size: var(--fs-500);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 3rem 0.3rem;
+  color: hsl(var(--clr-dark));
+  width: 100%;
 }
 /* ----------------- */
 /* Components        */
