--- a/shinobi-frontend/src/Components/AboutPage/AboutPage.css
+++ b/shinobi-frontend/src/Components/AboutPage/AboutPage.css
@@ -2,18 +2,6 @@
   display: ;
 
 } */
-.team-member {
-  height: 6.1rem;
-}
-.team-photo {
-  background-size: contain;
-  background-position: 30%;
-  width: 6rem;
-  height: 6rem;
-  border: 0.2rem solid hsl(var(--clr-red));
-  border-radius: 50%;
-  margin: 0.1rem;
-}
 .photo-colin {
   content: '';
   float: left;
@@ -22,9 +10,55 @@
   background-position: 30%;
   width: 7rem;
   height: 7rem;
-  border: 0.2rem solid hsl(var(--clr-red));
   border-radius: 50%;
   margin-right: 0.5rem;
+}
+
+.coaches-wrapper {
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+}
+.coach-member {
+  height: 12.2rem;
+  border: 0.2rem solid hsl(var(--clr-red));
+  border-radius: 0.25rem;
+  position: relative;
+  margin-bottom: 1rem;
+  /* transform-style: preserve-3d; */
+}
+
+.coach-member::after {
+  content: '';
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.6) 100%)
+    repeat 0 0;
+  z-index: 1;
+  transform-style: preserve-3d;
+}
+.coach-member > .coach-description {
+  font-size: var(--fs-200);
+  color: hsl(var(--clr-silver));
+  position: absolute;
+  height: 100%;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+.coach-member > .coach-photo {
+  position: absolute;
+  background-size: cover;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .photo-kieran {
