--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -190,6 +190,12 @@ select {
 .text-silver {
   color: hsl(var(--clr-silver));
 }
+.border-red {
+  border: 0.15rem solid hsl(var(--clr-red));
+}
+.border-dark {
+  border: 0.15rem solid hsl(var(--clr-dark));
+}
 
 /* Typography classes */
 .ff-normal {
@@ -251,7 +257,8 @@ select {
   justify-content: center;
   align-items: center;
   padding: 3rem 0.3rem;
-  color: hsl(var(--clr-dark));
+  color: hsl(var(--clr-white));
+  text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
   width: 100%;
 }
 /* ----------------- */
