--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -22,7 +22,7 @@
   /* Font-sizes */
   --fs-900: 9.375rem;
   --fs-800: 6.25rem;
-  --fs-700: 3.5rem;
+  --fs-700: 2.5rem;
   --fs-600: 2rem;
   --fs-500: 1.45rem;
   --fs-400: 1.125rem;
@@ -62,6 +62,8 @@ body {
   background-color: var(--clr-white);
   line-height: 1.5;
   min-height: 100vh;
+  /* margin: 0;
+  padding: 0; */
   border: 1px solid hsl(var(--clr-silver));
 }
 
@@ -256,19 +258,41 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4rem 0.1rem;
+  padding: 5rem 0.1rem;
   color: hsl(var(--clr-white));
   text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
   width: 100%;
   text-transform: uppercase;
 }
 
+.text-content {
+  font-size: var(--fs-200);
+}
 /* Media Querries */
+@media screen and (max-width: 320px) {
+  .page-title {
+    font-size: var(--fs-500);
+    padding: 6rem 0.3rem;
+  }
+}
 
 @media screen and (min-width: 600px) {
   .page-title {
     font-size: var(--fs-600);
-    padding: 6rem 0.3rem;
+    padding: 7rem 0.3rem;
+  }
+  .text-content {
+    font-size: var(--fs-300);
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .page-title {
+    font-size: var(--fs-700);
+    padding: 8rem 0.3rem;
+  }
+  .text-content {
+    font-size: var(--fs-400);
   }
 }
 /* ----------------- */
