--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -5,7 +5,7 @@
 }
 .classes {
   width: 100%;
-  height: 9.9rem;
+  height: 12rem;
   margin-bottom: 1rem;
   display: flex;
   background-size: cover;
@@ -37,7 +37,7 @@
 }
 
 @media screen and (min-width: 800px) {
-  .classes {
+  /* .classes {
     height: 77vh;
-  }
+  } */
 }
