--- a/shinobi-frontend/src/Components/AboutPage/AboutPage.css
+++ b/shinobi-frontend/src/Components/AboutPage/AboutPage.css
@@ -19,9 +19,15 @@
   box-shadow: 0 0.05rem 0.15rem 0.15rem hsl(var(--clr-red));
   border: 0.15rem solid hsl(var(--clr-red));
 }
-
-.coach-member {
-  height: 12.2rem;
+.team-title {
+  font-size: var(--fs-300);
+  color: hsl(var(--clr-white));
+  text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
+  text-transform: uppercase;
+  padding: 5rem 0 3.3rem 5rem;
+}
+.team-member {
+  height: 10rem;
   min-width: 8rem;
   max-width: 10.5rem;
   border-radius: 0.25rem;
@@ -31,7 +37,7 @@
   transform-style: preserve-3d;
 }
 
-.coach-member::after {
+.team-member::after {
   content: '';
   position: absolute;
   display: block;
@@ -45,7 +51,7 @@
   z-index: 1;
   transform-style: preserve-3d;
 }
-.coach-member > .coach-description {
+.team-member > .coach-description {
   font-size: var(--fs-200);
   color: hsl(var(--clr-silver));
   position: absolute;
@@ -56,7 +62,7 @@
   justify-content: center;
   padding: 0.5rem;
 }
-.coach-member > .coach-photo {
+.team-member > .coach-photo {
   position: absolute;
   background-size: cover;
   top: 0;
@@ -96,10 +102,20 @@
 }
 
 @media screen and (min-width: 800px) {
+  .photo-colin {
+    width: 9.3rem;
+  }
   .coaches-wrapper {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .coach-member {
-    min-width: 9rem;
+    width: 9rem;
+    height: 12rem;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .team-title {
+    padding: 10rem 0 5rem 5rem;
   }
 }
