--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -1,17 +1,35 @@
 .classes-page {
   width: 100%;
   min-height: 100vh;
-  border: 1px solid green;
 }
 .classes {
   width: 100%;
-  height: 12rem;
+  height: 15rem;
   margin-bottom: 1rem;
   display: flex;
   background-size: cover;
   background-repeat: no-repeat;
   align-items: center;
   padding: 1rem;
+  overflow: hidden;
+}
+.classes-name {
+  font-size: var(--fs-800);
+  padding: 0 5% 0 0;
+}
+.classes-text-right {
+  font-size: var(--fs-300);
+  display: flex;
+  margin-right: 16%;
+  padding: 1rem;
+  border: 1px solid yellow;
+}
+.classes-text-left {
+  font-size: var(--fs-300);
+  display: flex;
+  margin-left: 16%;
+  padding: 1rem;
+  border: 0.125rem solid hsl(var(--clr-red));
 }
 .class-jj {
   background-image: url('https://source.unsplash.com/7MRajrPiTqw');
@@ -23,6 +41,7 @@
   justify-content: flex-end;
   background-position: right;
   background-size: 88%;
+  flex-direction: row-reverse;
 }
 .class-w {
   background-image: url('https://source.unsplash.com/MS_RP-Lba0U');
@@ -34,10 +53,16 @@
   justify-content: flex-end;
   background-position: right;
   background-size: 88%;
+  flex-direction: row-reverse;
 }
 
+@media screen and (min-width: 600px) {
+  .classes {
+    height: 44vh;
+  }
+}
 @media screen and (min-width: 800px) {
-  /* .classes {
-    height: 77vh;
-  } */
+  .classes {
+    height: 44vh;
+  }
 }
