--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -4,7 +4,7 @@
 }
 .classes {
   width: 100%;
-  height: 15rem;
+  height: 11.1rem;
   margin-bottom: 1rem;
   display: flex;
   background-size: cover;
@@ -14,22 +14,28 @@
   overflow: hidden;
 }
 .classes-name {
-  font-size: var(--fs-800);
+  font-size: var(--fs-500);
   padding: 0 5% 0 0;
 }
 .classes-text-right {
-  font-size: var(--fs-300);
+  font-size: var(--fs-100);
   display: flex;
   margin-right: 16%;
-  padding: 1rem;
-  border: 1px solid yellow;
+  padding: 0.25rem;
+  border-left: 0.125rem solid hsl(var(--clr-red));
+  max-width: 36rem;
+  backdrop-filter: blur(10px);
 }
+
 .classes-text-left {
-  font-size: var(--fs-300);
+  font-size: var(--fs-100);
   display: flex;
   margin-left: 16%;
-  padding: 1rem;
-  border: 0.125rem solid hsl(var(--clr-red));
+  margin-right: 5%;
+  padding: 0.25rem;
+  border-right: 0.125rem solid hsl(var(--clr-red));
+  text-align: end;
+  max-width: 36rem;
 }
 .class-jj {
   background-image: url('https://source.unsplash.com/7MRajrPiTqw');
@@ -38,7 +44,7 @@
 }
 .class-s {
   background-image: url('https://source.unsplash.com/FH6JcaCrYJ0');
-  justify-content: flex-end;
+
   background-position: right;
   background-size: 88%;
   flex-direction: row-reverse;
@@ -50,7 +56,7 @@
 }
 .class-spar {
   background-image: url('https://source.unsplash.com/misTB4pmevc');
-  justify-content: flex-end;
+
   background-position: right;
   background-size: 88%;
   flex-direction: row-reverse;
@@ -60,9 +66,35 @@
   .classes {
     height: 44vh;
   }
+  .classes-name {
+    font-size: var(--fs-800);
+    padding: 0 5% 0 0;
+  }
+  .classes-text-right {
+    font-size: var(--fs-300);
+    padding: 1rem;
+  }
+  .classes-text-left {
+    font-size: var(--fs-300);
+    padding: 1rem;
+  }
 }
 @media screen and (min-width: 800px) {
   .classes {
     height: 44vh;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .classes-name {
+    font-size: var(--fs-900);
+    padding: 0 5% 0 0;
+  }
+  .classes-text-right {
+    font-size: var(--fs-400);
+    padding: 1rem;
+  }
+  .classes-text-left {
+    font-size: var(--fs-400);
+    padding: 1rem;
   }
 }
