--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -1,38 +1,31 @@
+/* to do the welcome text animation*/
+
 .welcome-logo {
   padding-inline: 0.33rem;
 }
 
 #welcome-text {
   height: 88vh;
+  max-height: 50rem;
 }
 
 .welcome-content > .nav-container {
   position: relative;
   width: 100%;
-  height: 33rem;
-}
-
-.media-content {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('https://source.unsplash.com/AsCCBr7J-XM');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  height: 100vh;
+  max-height: 54rem;
+  max-width: 80rem;
 }
 
 @media screen and (max-width: 320px) {
   .welcome-logo,
   #welcome-text {
-    scale: 81%;
+    transform: scale(81%);
   }
 }
 @media screen and (min-width: 600px) {
-  .media-content {
+  /* .media-content {
     background-image: url('https://source.unsplash.com/x_V62hOwnDk');
     width: 100vw;
-  }
+  } */
 }
