--- a/shinobi-frontend/src/Components/AboutPage/AboutPage.css
+++ b/shinobi-frontend/src/Components/AboutPage/AboutPage.css
@@ -6,9 +6,6 @@
 .photo-colin {
   content: '';
   float: left;
-  /* background-image: url('https://source.unsplash.com/cVLOqm8sSXc');
-  background-size: contain;
-  background-position: 30%; */
   width: 7rem;
   aspect-ratio: 1;
   border-radius: 50%;
@@ -25,6 +22,8 @@
   text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
   text-transform: uppercase;
   padding: 5rem 0 3.3rem 5rem;
+  -webkit-text-stroke: 0.33px hsl(var(--clr-dark));
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 .team-member {
   height: 10rem;
@@ -51,9 +50,9 @@
   z-index: 1;
   transform-style: preserve-3d;
 }
-.team-member > .coach-description {
+.team-member .coach-description {
   font-size: var(--fs-200);
-  color: hsl(var(--clr-silver));
+  color: hsl(var(--clr-white));
   position: absolute;
   height: 100%;
   z-index: 3;
@@ -61,6 +60,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
+  text-shadow: 0 1px 0 hsl(var(--clr-dark));
 }
 .team-member > .coach-photo {
   position: absolute;
@@ -96,6 +96,9 @@
   .photo-colin {
     width: 8.4rem;
   }
+  .team-title {
+    font-size: var(--fs-400);
+  }
   .coaches-wrapper {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
@@ -104,6 +107,9 @@
 @media screen and (min-width: 800px) {
   .photo-colin {
     width: 9.3rem;
+  }
+  .team-title {
+    font-size: var(--fs-500);
   }
   .coaches-wrapper {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -114,8 +120,19 @@
   }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1000px) {
+  .photo-colin {
+    margin-right: 1rem;
+  }
   .team-title {
-    padding: 10rem 0 5rem 5rem;
+    padding: 6rem 0 5rem 5rem;
+    font-size: var(--fs-600);
+  }
+  .team-member {
+    height: 12rem;
+    width: 10.5rem;
+  }
+  .team-member .coach-description {
+    font-size: var(--fs-300);
   }
 }
