--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -20,10 +20,11 @@
   --ff-hand: 'Shadows Into Light', cursive;
 
   /* Font-sizes */
+  --fs-900: 4.2rem;
   --fs-800: 3.3rem;
   --fs-700: 2.5rem;
-  --fs-600: 2rem;
-  --fs-500: 1.45rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.275rem;
   --fs-400: 1.125rem;
   --fs-300: 0.95rem;
   --fs-200: 0.8rem;
@@ -62,7 +63,7 @@ picture {
 /* Set up the body */
 body {
   font-family: var(--ff-normal);
-  font-size: var(--fs-400);
+  font-size: var(--fs-200);
   color: var(--clr-dark);
   background-color: var(--clr-white);
   line-height: 1.5;
@@ -252,10 +253,11 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50% 0.3rem;
+  padding: 10% 0.3rem 5% 0.3rem;
   color: hsl(var(--clr-white));
   text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
   text-transform: uppercase;
+  -webkit-text-stroke: 0.5px hsl(var(--clr-dark));
 }
 
 .text-content {
@@ -266,7 +268,6 @@ select {
 @media screen and (max-width: 320px) {
   .page-title {
     font-size: var(--fs-500);
-    /* padding: 80% 0.3rem; */
   }
   .text-content {
     font-size: var(--fs-100);
@@ -274,10 +275,13 @@ select {
 }
 
 @media screen and (min-width: 500px) {
+  body {
+    font-size: var(--fs-300);
+  }
   .page-title {
     font-size: var(--fs-600);
     letter-spacing: var(--ls-1);
-    padding: 33% 0.3rem 33% 0.3rem;
+    /* padding: 33% 0.3rem 33% 0.3rem; */
   }
   .text-content {
     font-size: var(--fs-300);
@@ -285,23 +289,29 @@ select {
 }
 
 @media screen and (min-width: 800px) {
+  body {
+    font-size: var(--fs-400);
+  }
   .page-title {
     font-size: var(--fs-700);
-    padding: 50% 0.3rem 30% 0.3rem;
+    /* padding: 50% 0.3rem 30% 0.3rem; */
     letter-spacing: var(--ls-2);
   }
   .text-content {
-    font-size: var(--fs-300);
+    font-size: var(--fs-400);
   }
 }
 
 @media screen and (min-width: 1000px) {
+  body {
+    font-size: var(--fs-500);
+  }
   .page-title {
     font-size: var(--fs-800);
-    padding: 20rem 0.6rem;
+    /* padding: 20rem 0.6rem; */
   }
   .text-content {
-    font-size: var(--fs-300);
+    font-size: var(--fs-500);
   }
 }
 /* ----------------- */
