animate the welcome text, improve video element styling

--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -7,14 +7,69 @@
 #welcome-text {
   height: 88vh;
   max-height: 50rem;
+  position: relative;
+  -webkit-text-stroke: 0.5px black;
 }
 
-.welcome-content > .nav-container {
+#welcome-text h3 span {
+  position: relative;
+}
+#welcome-text h3 span::before {
+  content: 'Shinobi Academy';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: hsl(var(--clr-red));
+  overflow: hidden;
+  width: 0%;
+  animation: animate 12s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 2s;
+}
+
+@keyframes animate {
+  0% {
+    width: 0;
+    top: -2.5px;
+  }
+  20% {
+    width: 20%;
+    top: -2.5px;
+  }
+  30% {
+    width: 40%;
+    top: -2.5px;
+  }
+  40% {
+    width: 80%;
+    top: -2.5px;
+  }
+  50% {
+    width: 200%;
+    top: -2.5px;
+  }
+  75% {
+    width: 100%;
+    top: -2.5px;
+  }
+  100% {
+    width: 0;
+    top: -2.5px;
+  }
+}
+.welcome-content .nav-container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: auto;
   max-height: 54rem;
   max-width: 80rem;
+}
+
+.nav-container video {
+  box-shadow: 0.33rem 0 0.33rem hsl(var(--clr-dark));
+  border-radius: 1rem;
 }
 
 @media screen and (max-width: 320px) {
