--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -61,6 +61,14 @@
   background-size: 88%;
   flex-direction: row-reverse;
 }
+.schedule-button {
+  width: 100%;
+  height: auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+/* Media Querries */
 
 @media screen and (min-width: 600px) {
   .classes {
